--- a/phonebook-ui/package.json
+++ b/phonebook-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "font-awesome": "^4.7.0",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.0",
     "rxjs": "~6.6.0",
